# cli_for_tdclient

./: README.md  README.rst  pyproject.toml  requirements.txt
cli_for_tdclient/: cli_for_tdclient.py
tests/: test_cli_tutorial.py
