[tool.poetry]
name = "cli-tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
funcy = "^1.14"
td-client = "^1.2"
certifi = "^2019.11"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = "19.3b0"
mypy = "^0.761.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
